# koinos-proto-embedded-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
cmake/: pkg-config.pc.in
libraries/: CMakeLists.txt
libraries/proto_embedded/: CMakeLists.txt  buffer.cpp
libraries/proto_embedded/include/google/protobuf/: any.h  any.hpp
libraries/proto_embedded/include/koinos/: any.h  buffer.hpp
tests/: CMakeLists.txt
tests/tests/: main.cpp  proto_test.cpp
